# announcer

./: .gitignore  .nais.yaml  Cargo.toml  Dockerfile  README.md  flake.nix
.github/: dependabot.yaml
.github/workflows/: deploy.yaml
src/: config.rs  main.rs  redis_client.rs  rss.rs  slack.rs
