[package]
name = "announcer"
version = "1.0.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8", features = ["macros"] }
color-eyre = "0.6.5"
md5 = "0.8"
quick-xml = { version = "0.38", features = ["serde", "serialize"] }
redis = { version = "1.0", features = ["tls-rustls"] }
regex = "1.12"
reqwest = { version = "0.12", features = ["charset", "http2", "json", "macos-system-configuration", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive", "serde_derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "json", "env-filter"] }
